Sharing all files for review

--- a/public/partials/favorites.html
+++ b/public/partials/favorites.html
@@ -36,8 +36,8 @@
                         alt="Image currently unavailable"></td>
                         <td width="60%">
                             <h4><b>{{product.name}}</b></h4>
-                            <p><b>Product Id: </b>{{product.id}}</p>
-                            <p><b>Short Description:</b> {{product.shortDesc}}</p>
+                            <p><b>Product Id: </b>{{product.sku}}</p>
+                            <p><b>Short Description:</b> {{product.shortDescription}}</p>
                         </td>
                         <td width="40%">
                             <p><b>Regular price : </b>${{product.regularPrice}}</p>
