--- a/public/partials/reviews.html
+++ b/public/partials/reviews.html
@@ -5,7 +5,7 @@
         <table class="table table-striped table-hover table-responsive prdtTable">
 
             <thead>
-                <!-- <tr>
+                <tr>
                     <td colspan="3">
                         Please add your reviews for the product here.
 
@@ -20,12 +20,12 @@
                         <input class="form-control" ng-model="review.description" placeholder="Type your review here" />
                     </td>
                     <td>
-                        <input type="text" ng-model="review.name" class="form-control" placeholder="Your name" />
+                        <input type="text" ng-model="review.reviewer" class="form-control" placeholder="Your name" />
                     </td>
                     <td>
                         <button style="float:left" class="btn btn-success" ng-click="addReview(review)"><span class="glyphicon glyphicon-plus"></span></button>
                     </td>
-                </tr> -->
+                </tr> 
                 <tr>
                     <th colspan="3">
                         Product Reviews
