--- a/public/partials/shoppingCart.html
+++ b/public/partials/shoppingCart.html
@@ -2,6 +2,40 @@
     
     <span class="instructions"> Sorry you have not added any products to your cart yet :-(</span>
 </div>
+<div class="row" ng-show="showCartCount">
+	<div class="col-sm-2">
+	</div>
+    <div class="col-sm-8">
+        <table class="table table-hover table-responsive">
+        <tr>
+        	<td>
+        		<label> Product Name </label>
+        	</td>
+        	<td>
+        	{{cartProduct.name}}
+        	</td>
+        	<td>
+        		<label> Product count </label>
+        	</td>
+        	<td>
+        		<input class="form-control" ng-model="cartProduct.count"/>
+        	</td>
+        </tr>
+        <tr>
+        <td colspan="2">
+        
+        </td>
+        <td colspan="2">
+        	<button class="btn btn-success" ng-click="updateCount(cartProduct)">
+                      Update Cart
+            </button> 
+        </td>
+        </tr>
+        </table>
+        </div>
+        <div class="col-sm-2">
+		</div>
+        </div>
 <div ng-show="cartProducts.length > 0">
     <div class="row">
         <div class=" col-sm-2">
@@ -13,9 +47,9 @@
         </div>
     </div>
     <div class="tablediv row">
-        <div class="col-sm-2">
+        <div class="col-sm-1">
         </div>
-        <div class="col-sm-8">
+        <div class="col-sm-10">
             <table class="table table-striped table-hover table-bordered table-responsive prdtTable">
                 <thead>
                     <tr>
@@ -28,28 +62,35 @@
                         <th>
                             Product price
                         </th>
+                        <th>
+                            Action
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="product in cartProducts">
-                        <td width="20%" class="prdtimg"><img class="centeredImg" ng-src="{{product.image}}"
+                    <tr ng-repeat="cartProduct in cartProducts">
+                        <td width="20%" class="prdtimg"><img class="centeredImg" ng-src="{{cartProduct.image}}"
                         alt="Image currently unavailable"></td>
                         <td width="60%">
-                            <h4><b>{{product.name}}</b></h4>
-                            <p><b>Product Id: </b>{{product.id}}</p>
-                            <p><b>Short Description:</b> {{product.shortDesc}}</p>
+                            <h4><b>{{cartProduct.name}}</b></h4>
+                            <p><b>Product Id: </b>{{cartProduct.sku}}</p>
+                            <p><b>Short Description:</b> {{cartProduct.shortDescription}}</p>
                         </td>
                         <td>
-                            <p><b>Product price : </b>${{product.salePrice}}</p>
+                            <p><b>Product price : </b>${{cartProduct.salePrice}}</p>
+                            
                         </td>
-                        
+                        <td>
+                        	<button style="float:left" class="btn btn-danger" ng-click="remove($index)">
+                        	<span class="glyphicon glyphicon-remove"></span></button> </br>
+                        </td>
                     </tr>
                 </tbody>
             </table>
-            <div class="cartPrice"> <b>Total Price :</b> ${{totalPrice}}</div>
+
             <br/><br/><br/><br/>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-1">
         </div>
     </div>
 </div>
